--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jin",
+  "name": "jin-pack",
   "version": "1.0.0",
   "description": "气死人，打包器！！！💪",
   "bin": {
@@ -7,12 +7,14 @@
   },
   "scripts": {
     "build": "babel ./src  --out-dir ./lib",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "jIn serve 3000"
   },
-  "author": "",
+  "author": "Jerry xu",
   "license": "ISC",
   "dependencies": {
     "@babel/plugin-syntax-async-generators": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/runtime": "^7.5.4",
     "babel-plugin-add-module-exports": "^1.0.2",
