--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "babel ./src  --out-dir ./lib",
     "prepublish": "npm run build",
-    "test": "jIn serve 3000"
+    "test": "jIn serve 3000 ./example"
   },
   "author": "Jerry xu",
   "license": "ISC",
@@ -16,9 +16,14 @@
     "@babel/plugin-syntax-async-generators": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.0",
+    "@babel/register": "^7.5.5",
     "@babel/runtime": "^7.5.4",
     "babel-plugin-add-module-exports": "^1.0.2",
+    "cache-loader": "^4.1.0",
+    "chokidar": "^3.0.2",
+    "thread-loader": "^2.1.2",
     "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0",
     "yargs": "^13.3.0"
   },
   "devDependencies": {
@@ -26,6 +31,7 @@
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "express": "^4.17.1",
+    "happypack": "^5.0.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.6"
   }
