调整热开发配置

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jin-pack",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "气死人，打包器！！！💪",
   "bin": {
     "jIn": "./jIn.js"
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.5.4",
     "express": "^4.17.1",
     "happypack": "^5.0.1",
+    "stats-webpack-plugin": "^0.7.0",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.6"
   }
