--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jin-pack",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "气死人，打包器！！！💪",
   "keywords": [
     "webpack",
@@ -23,14 +23,19 @@
     "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/register": "^7.5.5",
     "@babel/runtime": "^7.5.4",
+    "babel-loader": "^8.0.6",
     "babel-plugin-add-module-exports": "^1.0.2",
     "cache-loader": "^4.1.0",
     "chokidar": "^3.0.2",
     "inquirer": "^6.5.0",
     "memory-fs": "^0.4.1",
     "thread-loader": "^2.1.2",
+    "url-loader": "^2.1.0",
+    "vue-loader": "^15.7.1",
+    "webpack-dashboard": "^3.0.7",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0",
+    "webpack-jarvis": "^0.3.2",
     "yargs": "^13.3.0"
   },
   "devDependencies": {
